<resources>
    <string name="app_name">Dunamix Admin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Gallery Management</string>
    <string name="tab_text_2">User Management</string>
    <string name="upload">Upload Pictures</string>
    <string name="remove">Remove</string>
    <string name="view_all">View All</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="upload_video">Upload Video</string>
</resources>